[package]
name = "extraction"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.31", features = ["derive"] }
futures = "0.3.31"
indicatif = { version = "0.17.11", features = ["rayon"] }
log = "0.4.26"
once_cell = "1.20.3"
pbo_tools = { path = "../pbo_tools" }
rayon = "1.10.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
tokio = { version = "1.44.0", features = ["full"] }
walkdir = "2.5.0"

[dev-dependencies]
test-case = "3.3.1"
tempfile = "3.18.0"

[lints.rust]
dead_code = "allow"
unused_parens = "allow"
unused_imports = "allow"
unused_variables = "allow"
unused_mut = "allow"
