[package]
name = "extraction"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
log = "0.4.26"
env_logger = "0.11.7"
pbo_tools = { path = "../pbo_tools" }
rayon = "1.10.0"
tokio = { version = "1.44.0", features = ["full"] }
walkdir = "2.5.0"
indicatif = "0.17.11"
sha2 = "0.10.8"

[dev-dependencies]
tempfile = "3.18.0"
num_cpus = "1.16.0"

[[example]]
name = "basic_extraction"
path = "examples/basic_extraction.rs"

[[example]]
name = "advanced_extraction"
path = "examples/advanced_extraction.rs"
